--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="nl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="node_modules/oba-wrapper/js/index.js" type="module"></script>
+    <title>OBA - Maak je briefkaart</title>
+  </head>
+  <body>
+    <script type="module" src="./src/js/script.js"></script>
+  </body>
+</html>
