created object with data

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>OBA - Maak je briefkaart</title>
   </head>
   <body>
+    <main></main>
     <script type="module" src="./src/js/script.js"></script>
   </body>
 </html>
