--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="node_modules/oba-wrapper/js/index.js" type="module"></script>
+    <link rel="stylesheet" href="./src/css/styles.css" />
     <title>OBA - Maak je briefkaart</title>
   </head>
   <body>
-    <main></main>
+    <header class="header">
+      <img class="header-logo" src="/src/img/oba_logo.jpg" alt="logo" />
+      <div class="header-input--container">
+        <input class="search-bar" id="search-bar" type="text" />
+        <label class="search-label" for="search-bar">Vind uw briefkaart</label>
+      </div>
+    </header>
+    <main class="container"></main>
+    <footer class="footer"></footer>
     <script type="module" src="./src/js/script.js"></script>
   </body>
 </html>
