render data postcards

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="node_modules/oba-wrapper/js/index.js" type="module"></script>
     <link rel="stylesheet" href="./src/css/styles.css" />
+    <script src="node_modules/oba-wrapper/js/index.js" type="module"></script>
     <title>OBA - Maak je briefkaart</title>
   </head>
   <body>
@@ -13,7 +13,7 @@
       <img class="header-logo" src="/src/img/oba_logo.jpg" alt="logo" />
       <div class="header-input--container">
         <input class="search-bar" id="search-bar" type="text" />
-        <label class="search-label" for="search-bar">Vind uw briefkaart</label>
+        <label class="search-label" for="search-bar">Zoek een briefkaart</label>
       </div>
     </header>
     <main class="container"></main>
