--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <main class="container"></main>
     <footer class="footer"></footer>
     <script type="module" src="./src/js/script.js"></script>
+    <script type="text/javascript" src="./src/js/router.js"></script>
   </body>
 </html>
