github pages fix

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./src/css/styles.css" />
-    <script src="node_modules/oba-wrapper/js/index.js" type="module"></script>
+    <script src="./oba-wrapper/js/index.js" type="module"></script>
     <title>OBA - Maak je briefkaart</title>
   </head>
   <body>
